[gd_scene load_steps=9 format=3 uid="uid://cqlyj2jyexmds"]

[ext_resource type="Script" uid="uid://d1bsumhmk1ygf" path="res://addons/sprouty_dialogs/editor/modules/variables/scripts/variable_group.gd" id="1_gui6w"]
[ext_resource type="StyleBox" uid="uid://diu04q0efmvpq" path="res://addons/sprouty_dialogs/theme/variable_group_panel.tres" id="1_hq6qs"]
[ext_resource type="StyleBox" uid="uid://dfa36wxs72oc0" path="res://addons/sprouty_dialogs/theme/empty_panel.tres" id="2_mjwdj"]
[ext_resource type="Texture2D" uid="uid://dr1gdp63atsvl" path="res://addons/sprouty_dialogs/icons/drag-handle.svg" id="4_a547j"]
[ext_resource type="Texture2D" uid="uid://bix6vg2cttnqd" path="res://addons/sprouty_dialogs/icons/interactable/collapse-up.svg" id="5_a547j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4vsm"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_right = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="Image" id="Image_gui6w"]
data = {
"data": PackedByteArray(255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 0, 255, 92, 92, 127, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 0, 255, 93, 93, 255, 255, 92, 92, 127, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 92, 92, 127, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 92, 92, 127, 255, 92, 92, 0, 255, 92, 92, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 231, 255, 90, 90, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 90, 90, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 0, 255, 93, 93, 0, 255, 91, 91, 0, 255, 91, 91, 0, 255, 91, 91, 42, 255, 90, 90, 0, 255, 94, 94, 0, 255, 91, 91, 42, 255, 93, 93, 233, 255, 92, 92, 232, 255, 93, 93, 41, 255, 90, 90, 0, 255, 94, 94, 0, 255, 91, 91, 42, 255, 93, 93, 233, 255, 92, 92, 232, 255, 92, 92, 0, 255, 92, 92, 0, 255, 91, 91, 0, 255, 91, 91, 0, 255, 91, 91, 0, 255, 91, 91, 45, 255, 93, 93, 44, 255, 91, 91, 0, 255, 91, 91, 42, 255, 91, 91, 42, 255, 93, 93, 0, 255, 91, 91, 45, 255, 93, 93, 44, 255, 91, 91, 0, 255, 91, 91, 42, 255, 91, 91, 42, 255, 91, 91, 0, 255, 91, 91, 0, 255, 91, 91, 0, 255, 91, 91, 0, 255, 91, 91, 45, 255, 92, 92, 235, 255, 92, 92, 234, 255, 89, 89, 43, 255, 91, 91, 0, 255, 91, 91, 0, 255, 91, 91, 45, 255, 92, 92, 235, 255, 92, 92, 234, 255, 89, 89, 43, 255, 91, 91, 0, 255, 91, 91, 0, 255, 91, 91, 0, 255, 91, 91, 0, 255, 92, 92, 0, 255, 92, 92, 0, 255, 92, 92, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 91, 91, 59, 255, 92, 92, 61, 255, 92, 92, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 91, 91, 59, 255, 92, 92, 61, 255, 92, 92, 0, 255, 92, 92, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0, 255, 93, 93, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_a547j"]
image = SubResource("Image_gui6w")

[node name="VariableGroup" type="PanelContainer"]
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = ExtResource("1_hq6qs")
script = ExtResource("1_gui6w")
_group_name = "New Group"
_group_color = Color(0, 0, 0, 1)

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="--" type="HSeparator" parent="Container/Header"]
layout_mode = 2

[node name="Bar" type="PanelContainer" parent="Container/Header"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v4vsm")

[node name="DropHighlight" type="ColorRect" parent="Container/Header/Bar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
color = Color(0.588235, 0.588235, 0.588235, 0.588235)

[node name="Container" type="HBoxContainer" parent="Container/Header/Bar"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DragButton" type="Button" parent="Container/Header/Bar/Container"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
icon = ExtResource("4_a547j")
flat = true

[node name="ExpandableButton" type="Button" parent="Container/Header/Bar/Container"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Expand"
toggle_mode = true
button_pressed = true
icon = ExtResource("5_a547j")
flat = true

[node name="ColorPicker" type="ColorPickerButton" parent="Container/Header/Bar/Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
edit_alpha = false

[node name="NameInput" type="LineEdit" parent="Container/Header/Bar/Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("2_mjwdj")
text = "New Group"
placeholder_text = "Group name..."

[node name="ModifiedIndicator" type="Label" parent="Container/Header/Bar/Container"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Unsaved changes"
mouse_filter = 1
text = "(*)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemoveButton" type="Button" parent="Container/Header/Bar/Container"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Remove Group"
icon = SubResource("ImageTexture_a547j")
flat = true

[node name="---" type="HSeparator" parent="Container/Header"]
layout_mode = 2

[node name="SubPanel" type="PanelContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_v4vsm")

[node name="ItemsContainer" type="VBoxContainer" parent="Container/SubPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="EmptyLabel" type="Label" parent="Container/SubPanel/ItemsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "(No items in the group)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropHighlightLine" type="ColorRect" parent="Container/SubPanel/ItemsContainer/EmptyLabel"]
visible = false
custom_minimum_size = Vector2(0, 2)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="LastSeparator" type="HSeparator" parent="Container"]
layout_mode = 2
